# rust-diesel-actix-web-api

./: Cargo.toml  setup.txt
migrations/2022-09-21-013621_posts/: up.sql
src/: main.rs
src/apiv1/: apimodels.rs  mod.rs  routes.rs
src/db/: delete.rs  mod.rs  models.rs  update.rs  view.rs  write.rs
src/models/: schema.rs
